--- a/bnnuy-clicker/Cargo.toml
+++ b/bnnuy-clicker/Cargo.toml
@@ -5,6 +5,9 @@ license = "MIT OR Apache-2.0"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 bevy = { version = "0.8.1", default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_winit", "png", "render", "x11"] }
 bevy_rapier2d = "0.17.0"
@@ -14,3 +17,6 @@ rand = "0.8.5"
 [features]
 default = ["bevy_dyn"]
 bevy_dyn = ["bevy/dynamic"]
+
+[target.wasm32-unknown-unknown.dependencies]
+wasm-bindgen = "0.2.83"
